--- a/ranking/index2.html
+++ b/ranking/index2.html
@@ -62,6 +62,13 @@
                 </tbody>
             </table>
         </div>
+        <!-- Popup HTML -->
+        <div id="popup" class="popup">
+            <div class="popup-content">
+                <span id="close-btn" class="close-btn">&times;</span>
+            <p>Conteúdo do Popup Aqui</p>
+    </div>
+</div>
         <script src="ranking.js"></script>
         <script src="script2.js"></script>
         <script src="hist.js></script>
