--- a/ranking/index2.html
+++ b/ranking/index2.html
@@ -71,7 +71,7 @@
 </div>
         <script src="ranking.js"></script>
         <script src="script2.js"></script>
-        <script src="hist.js></script>
+        <script src="hist.js"></script>
     </div>
 </body>
 </html>
