--- a/ranking/index2.html
+++ b/ranking/index2.html
@@ -6,6 +6,7 @@
     <title>RKFox - Ranking da Comunidade</title>
     <link rel="stylesheet" href="styles2.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
