--- a/ranking/index2.html
+++ b/ranking/index2.html
@@ -65,11 +65,11 @@
         </div>
         <!-- Popup HTML -->
         <div id="popup" class="popup">
-            <div class="popup-content">
-                <span id="close-btn" class="close-btn">&times;</span>
-            <p>Conteúdo do Popup Aqui</p>
+        <div class="popup-content">
+            <span id="close-btn" class="close-btn">&times;</span>
+            <canvas id="userChart"></canvas>
+        </div>
     </div>
-</div>
         <script src="ranking.js"></script>
         <script src="script2.js"></script>
         <script src="hist.js"></script>
