--- a/ranking/index2.html
+++ b/ranking/index2.html
@@ -64,12 +64,13 @@
             </table>
         </div>
         <!-- Popup HTML -->
-        <div id="popup" class="popup">
-        <div class="popup-content">
-            <span id="close-btn" class="close-btn">&times;</span>
-            <canvas id="userChart"></canvas>
-        </div>
+<div id="popup" class="popup">
+    <div class="popup-content">
+        <span id="close-btn" class="close-btn">&times;</span>
+        <canvas id="userChart"></canvas>
     </div>
+</div>
+<input type="file" id="fileInput" />
         <script src="ranking.js"></script>
         <script src="script2.js"></script>
         <script src="hist.js"></script>
