--- a/impacto/index.html
+++ b/impacto/index.html
@@ -37,6 +37,11 @@
                 <input type="text" id="linkInput" placeholder="RKFox">
                 <button id="searchButton">Pesquisar</button>
             </div>
+            <div class="radio-buttons">
+                <label><input type="radio" name="option" value="op1"> 1 slot</label>
+                <label><input type="radio" name="option" value="op2"> 2 slots</label>
+                <label><input type="radio" name="option" value="op3"> ambos</label>
+            </div>
             <div>
                 <img id="avatar" src="" alt="Avatar do usuário" style="display: none; margin: auto;">
                 <h3 id="welcomeMessage"></h3>
