--- a/impacto/index.html
+++ b/impacto/index.html
@@ -40,7 +40,7 @@
             <div class="radio-buttons">
                 <label><input type="radio" name="option" value="op1"> 1 slot</label>
                 <label><input type="radio" name="option" value="op2"> 2 slots</label>
-                <label><input type="radio" name="option" value="op3"> ambos</label>
+                <label><input type="radio" name="option" value="op3" checked> ambos</label>
             </div>
             <div>
                 <img id="avatar" src="" alt="Avatar do usuário" style="display: none; margin: auto;">
