--- a/craft/index.html
+++ b/craft/index.html
@@ -185,19 +185,19 @@
                 const multi = i;
 
                 // Cálculo para Craft 1
-                const valorCraft1 = Math.ceil(xpDesejado / ((quantidadeCraft1 * precoPecaCraft1 * xpRltMarket) + ((precoCraft1 + precoSpeed1) * xpRltCraft)));
+                const valorCraft1 = Math.ceil(xpDesejado / (((quantidadeCraft1 * precoPecaCraft1 * xpRltMarket) + ((precoCraft1 + precoSpeed1) * xpRltCraft) * i));
                 const custoCraft1 = (quantidadeCraft1 * precoPecaCraft1) + precoCraft1 + precoSpeed1;
                 const exchangeCraft1 = custoCraft1 * 0.68;
                 const cashCraft1 = valorCraft1 * cash1;
 
                 // Cálculo para Craft 2
-                const valorCraft2 = Math.ceil(xpDesejado / ((quantidadeCraft2 * precoPecaCraft2 * xpRltMarket) + ((precoCraft2 + precoSpeed2) * xpRltCraft)));
+                const valorCraft2 = Math.ceil(xpDesejado / (((quantidadeCraft2 * precoPecaCraft2 * xpRltMarket) + ((precoCraft2 + precoSpeed2) * xpRltCraft) * i));
                 const custoCraft2 = (quantidadeCraft2 * precoPecaCraft2) + precoCraft2 + precoSpeed2;
                 const exchangeCraft2 = custoCraft2 * 0.68;
                 const cashCraft2 = valorCraft2 * cash2;
 
                 // Cálculo para Craft 3
-                const valorCraft3 = Math.ceil(xpDesejado / ((quantidadeCraft3 * precoPecaCraft3 * xpRltMarket) + ((precoCraft3 + precoSpeed3) * xpRltCraft)));
+                const valorCraft3 = Math.ceil(xpDesejado / (((quantidadeCraft3 * precoPecaCraft3 * xpRltMarket) + ((precoCraft3 + precoSpeed3) * xpRltCraft) * i));
                 const custoCraft3 = (quantidadeCraft3 * precoPecaCraft3) + precoCraft3 + precoSpeed3;
                 const exchangeCraft3 = custoCraft3 * 0.68;
                 const cashCraft3 = valorCraft3 * cash3;
