--- a/craft/index.html
+++ b/craft/index.html
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="form-group">
-                    <h3>Peca Craft 1</h3>
+                    <h3>Peça Craft 1</h3>
                     <label for="quantidade-craft1">Quantidade peça:</label>
                     <input type="number" id="quantidade-craft1" required>
                     <label for="preco-peca-craft1">Preço peça:</label>
@@ -99,18 +99,18 @@
                     <thead>
                         <tr>
                             <th>Multi</th>
-                            <th>Craft1</th>
-                            <th>Exchange1</th>
-                            <th>Custo1</th>
-                            <th>Cash1</th>
-                            <th>Craft2</th>
-                            <th>Exchange2</th>
-                            <th>Custo2</th>
-                            <th>Cash2</th>
-                            <th>Craft3</th>
-                            <th>Exchange3</th>
-                            <th>Custo3</th>
-                            <th>Cash3</th>
+                            <th>Qtd Craft 1</th>
+                            <th>Dólar</th>
+                            <th>Custo</th>
+                            <th>Venda</th>
+                            <th>Qtd Craft 2</th>
+                            <th>Dólar</th>
+                            <th>Custo</th>
+                            <th>Venda</th>
+                            <th>Qtd Craft 3</th>
+                            <th>Dólar</th>
+                            <th>Custo</th>
+                            <th>Venda</th>
                         </tr>
                     </thead>
                     <tbody>
