--- a/craft/index.html
+++ b/craft/index.html
@@ -32,7 +32,8 @@
         </label>
 
         <div class="calc">
-            <h1>Calculadora de Craft</h1>
+            <h1>Calculadora de Craft</h1><br>
+            <h3>Dados do Evento</h3>
             <form id="craft-form">
                 <div class="form-group">
                     <label for="xp-desejado">XP Desejado:</label>
@@ -50,7 +51,7 @@
                 </div>
 
                 <div class="form-group">
-                    <h3>Peça Craft 1</h3>
+                    <h3>Receita do Craft</h3>
                     <label for="quantidade-craft1">Quantidade peça:</label>
                     <input type="number" id="quantidade-craft1" required>
                     <label for="preco-peca-craft1">Preço peça:</label>
@@ -63,34 +64,6 @@
                     <input type="number" id="cash1" required>
                 </div>
 
-                <div class="form-group">
-                    <h3>Peca Craft 2</h3>
-                    <label for="quantidade-craft2">Quantidade peça:</label>
-                    <input type="number" id="quantidade-craft2" required>
-                    <label for="preco-peca-craft2">Preço peça:</label>
-                    <input type="number" id="preco-peca-craft2" required>
-                    <label for="preco-craft2">Preço craft:</label>
-                    <input type="number" id="preco-craft2" required>
-                    <label for="preco-speed2">Preço speed:</label>
-                    <input type="number" id="preco-speed2" required>
-                    <label for="cash2">Cash2:</label>
-                    <input type="number" id="cash2" required>
-                </div>
-
-                <div class="form-group">
-                    <h3>Peca Craft 3</h3>
-                    <label for="quantidade-craft3">Quantidade peça:</label>
-                    <input type="number" id="quantidade-craft3" required>
-                    <label for="preco-peca-craft3">Preço peça:</label>
-                    <input type="number" id="preco-peca-craft3" required>
-                    <label for="preco-craft3">Preço craft:</label>
-                    <input type="number" id="preco-craft3" required>
-                    <label for="preco-speed3">Preço speed:</label>
-                    <input type="number" id="preco-speed3" required>
-                    <label for="cash3">Cash3:</label>
-                    <input type="number" id="cash3" required>
-                </div>
-
                 <button type="button" onclick="calcular()">Calcular</button>
             </form>
 
@@ -99,16 +72,8 @@
                     <thead>
                         <tr>
                             <th>Multi</th>
-                            <th>Qtd Craft 1</th>
-                            <th>Dólar</th>
-                            <th>Custo</th>
-                            <th>Venda</th>
-                            <th>Qtd Craft 2</th>
-                            <th>Dólar</th>
-                            <th>Custo</th>
-                            <th>Venda</th>
-                            <th>Qtd Craft 3</th>
-                            <th>Dólar</th>
+                            <th>Quantidade</th>
+                            <th>Exchange</th>
                             <th>Custo</th>
                             <th>Venda</th>
                         </tr>
