--- a/craft/index.html
+++ b/craft/index.html
@@ -76,6 +76,7 @@
                             <th>Exchange</th>
                             <th>Custo</th>
                             <th>Venda</th>
+                            <th>Saldo</th>
                         </tr>
                     </thead>
                     <tbody>
