--- a/craft/index.html
+++ b/craft/index.html
@@ -41,26 +41,30 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="xp-rlt-craft">XP/RLT Craft:</label>
+                    <label for="xp-rlt-craft">XP por 1 RLT gasto no Craft:</label>
                     <input type="number" id="xp-rlt-craft" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="xp-rlt-market">XP/RLT Market:</label>
+                    <label for="xp-rlt-market">XP por 1 RLT gasto no Market:</label>
                     <input type="number" id="xp-rlt-market" required>
                 </div>
 
                 <div class="form-group">
                     <h3>Receita do Craft</h3>
-                    <label for="quantidade-craft1">Quantidade peça:</label>
+                    <label for="quantidade-miner1">Quantidade de Miners:</label>
+                    <input type="number" id="quantidade-miner1" required>
+                    <label for="preco-miner1">Preço das Miners:</label>
+                    <input type="number" id="preco-miner1" required>
+                    <label for="quantidade-craft1">Quantidade de Peças:</label>
                     <input type="number" id="quantidade-craft1" required>
-                    <label for="preco-peca-craft1">Preço peça:</label>
+                    <label for="preco-peca-craft1">Preço das Peças:</label>
                     <input type="number" id="preco-peca-craft1" required>
-                    <label for="preco-craft1">Preço craft:</label>
+                    <label for="preco-craft1">Preço do Craft:</label>
                     <input type="number" id="preco-craft1" required>
-                    <label for="preco-speed1">Preço speed:</label>
+                    <label for="preco-speed1">Preço do Speed-Up:</label>
                     <input type="number" id="preco-speed1" required>
-                    <label for="cash1">Cash1:</label>
+                    <label for="cash1">Preço de Venda do Craft:</label>
                     <input type="number" id="cash1" required>
                 </div>
 
