--- a/craft/index.html
+++ b/craft/index.html
@@ -39,41 +39,41 @@
                     <th colspan="2">Dados do Evento</th>
                     <tr>
                         <td><label for="xp-desejado">XP Desejado:</label></td>
-                        <td><input type="number" id="xp-desejado" required></td>
+                        <td><input type="number" id="xp-desejado" value="0" required></td>
                     </tr>
                     <tr>
                         <td><label for="xp-rlt-craft">XP/RLT Craft:</label></td>
-                        <td><input type="number" id="xp-rlt-craft" required></td>
+                        <td><input type="number" id="xp-rlt-craft" value="0" required></td>
                     </tr>
                     <tr>
                         <td><label for="xp-rlt-market">XP/RLT Market:</label></td>
-                        <td><input type="number" id="xp-rlt-market" required></td>
+                        <td><input type="number" id="xp-rlt-market" value="0" required></td>
                     </tr>
                 </table>
                 <table class="form-table">    
                     <th colspan="4">Receita do Craft</th>
                 <tr>
                     <td><label for="quantidade-miner1">Quantidade de Miners:</label></td>
-                    <td><input type="number" id="quantidade-miner1" required></td>
+                    <td><input type="number" id="quantidade-miner1" value="0" required></td>
                     <td><label for="preco-miner1">Preço das Miners:</label></td>
-                    <td><input type="number" id="preco-miner1" required></td>
+                    <td><input type="number" id="preco-miner1" value="0" required></td>
                 </tr>
                 <tr>
                     <td><label for="quantidade-craft1">Quantidade de Peças:</label></td>
-                    <td><input type="number" id="quantidade-craft1" required></td>
+                    <td><input type="number" id="quantidade-craft1" value="0" required></td>
                     <td><label for="preco-peca-craft1">Preço das Peças:</label></td>
-                    <td><input type="number" id="preco-peca-craft1" required></td>
+                    <td><input type="number" id="preco-peca-craft1" value="0" required></td>
                 </tr>
                 <tr>
                     <td><label for="preco-craft1">Preço do Craft:</label></td>
-                    <td><input type="number" id="preco-craft1" required></td>
+                    <td><input type="number" id="preco-craft1" value="0" required></td>
                     <td><label for="preco-speed1">Preço do Speed-Up:</label></td>
-                    <td><input type="number" id="preco-speed1" required></td>
+                    <td><input type="number" id="preco-speed1" value="0" required></td>
                 </tr>
             <!-- Linha final com uma célula mesclada -->
                 <tr>
                     <td colspan="2"><label for="cash1">Preço de Venda do Craft:</label></td>
-                    <td colspan="2"><input type="number" id="cash1" required></td>
+                    <td colspan="2"><input type="number" id="cash1" value="0" required></td>
                 </tr>
                 </table>
                 
