--- a/craft/index.html
+++ b/craft/index.html
@@ -72,7 +72,7 @@
                 </tr>
             <!-- Linha final com uma célula mesclada -->
                 <tr>
-                    <td colspan="2"><label for="cash1">Preço de Venda do Craft:</label></td>
+                    <td colspan="2"><label for="cash1" style="text-align: right;">Preço de Venda do Craft:</label></td>
                     <td colspan="2"><input type="number" id="cash1" value="0" required></td>
                 </tr>
                 </table>
