--- a/craft/index.html
+++ b/craft/index.html
@@ -73,7 +73,7 @@
             <!-- Linha final com uma célula mesclada -->
                 <tr>
                     <td colspan="2"><label for="cash1" style="text-align: right;">Preço de Venda do Craft:</label></td>
-                    <td colspan="2"><input type="number" id="cash1" value="0" required></td>
+                    <td colspan="2"><input type="number" id="cash1" style="width: 200px;" value="0" required></td>
                 </tr>
                 </table>
                 
