--- a/craft/index.html
+++ b/craft/index.html
@@ -73,8 +73,8 @@
             <!-- Linha final com uma célula mesclada -->
                 <tr>
                     <td></td>
-                    <td<label for="cash1">Preço de Venda do Craft:</label></td>
-                    <td<input type="number" id="cash1" value="0" required></td>
+                    <td><label for="cash1">Preço de Venda do Craft:</label></td>
+                    <td><input type="number" id="cash1" value="0" required></td>
                     <td></td>
                 </tr>
                 </table>
