--- a/recompensas/index.html
+++ b/recompensas/index.html
@@ -31,7 +31,7 @@
             <span class="slider"></span>
         </label>
         <div class="calc">
-            <h1>Dados Decodificados</h1>
+            <h1>Tabela de Recompensas</h1>
             <table id="dataTable">
                 <thead>
                     <tr id="nomeevento"></tr>
