--- a/recompensas/index.html
+++ b/recompensas/index.html
@@ -43,6 +43,7 @@
                         <th>Poder</th>
                         <th>Bônus</th>
                         <th>Negociável</th>
+                        <th>Valor</th>
                     </tr>
                 </thead>
                 <tbody>
