--- a/craft/index.html
+++ b/craft/index.html
@@ -86,11 +86,11 @@
                 <table id="resultado-tabela">
                     <thead>
                         <tr>
-                            <th>Multi</th>
-                            <th>Quantidade</th>
-                            <th>Custo</th>
-                            <th>Venda</th>
-                            <th>Saldo</th>
+                            <th style="width: 20%;">Multi</th>
+                            <th style="width: 20%;">Quantidade</th>
+                            <th style="width: 20%;">Custo</th>
+                            <th style="width: 20%;">Venda</th>
+                            <th style="width: 20%;">Saldo</th>
                         </tr>
                     </thead>
                     <tbody>
